# summary-paper-bot

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: fetch_papers.py  run.sh  run_bot.sh
src/: fetch_url.py  main.py  post_slack.py  slack_bot.py  summarize.py  summarize_url.py
